--- a/apps/store/templates/store/orders.html
+++ b/apps/store/templates/store/orders.html
@@ -7,47 +7,115 @@
 {% endblock title %}
 
 {% block content %}
+
+
+
     <div id="page-top" class="wide">
         <div id="user">
-            {% if has_order %}
-                {% for order in orders %}
-                    <a href="{% url 'store:order_item' order.id %}">
-                        <h1>{% translate "order" %} {{ forloop.counter }} {% translate "status" %} {{ order.get_status_display }}</h1>
-                    </a>
-                    <table class="table" id="cart-table">
-                        <thead>
-                        <tr>
-                            <th scope="col">سطر</th>
-                            <th scope="col">نام کالا</th>
-                            <th scope="col">قیمت</th>
-                            <th scope="col">تعداد</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for item in order.orderitem_set.all %}
-                            <tr id="row{{ forloop.counter }}">
-                                <th scope="row">{{ forloop.counter }}</th>
-                                <td>{{ item.product.title }}</td>
-                                <td>{{ item.product.price |floatformat:"0" |intcomma }}</td>
-                                <td>{{ item.quantity }}</td>
-                            </tr>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="payed-orders-tab" data-bs-toggle="tab"
+                            data-bs-target="#payed-orders" type="button"
+                            role="tab" aria-controls="payed-orders" aria-selected="true">
+                        <h1>پرداخت نشده</h1>
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="unpayed-orders-tab" data-bs-toggle="tab"
+                            data-bs-target="#unpayed-orders"
+                            type="button"
+                            role="tab" aria-controls="unpayed-orders" aria-selected="false">
+                        <h1>تسویه شده</h1>
+                    </button>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active mt-4" id="payed-orders" role="tabpanel"
+                     aria-labelledby="payed-orders-tab">
+                    {% if has_payed_orders %}
+                        {% for order in payed_orders %}
+                            <a href="{% url 'store:order_item' order.id %}">
+                                <h1>{% translate "order" %} {{ forloop.counter }} {% translate "status" %} {{ order.get_status_display }}</h1>
+                            </a>
+                            <table class="table" id="cart-table">
+                                <thead>
+                                <tr>
+                                    <th scope="col">سطر</th>
+                                    <th scope="col">نام کالا</th>
+                                    <th scope="col">قیمت</th>
+                                    <th scope="col">تعداد</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for item in order.orderitem_set.all %}
+                                    <tr id="row{{ forloop.counter }}">
+                                        <th scope="row">{{ forloop.counter }}</th>
+                                        <td>{{ item.product.title }}</td>
+                                        <td>{{ item.product.price |floatformat:"0" |intcomma }}</td>
+                                        <td>{{ item.quantity }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            <h1>
+                                مبلغ سفارش
+                                {{ order.total_price }}
+                            </h1>
+                            <form autocomplete=off method="post" action="{% url 'store:payments' %}">
+                                {% csrf_token %}
+                                <input type="text" hidden name="order_id" value="{{ order.id }}">
+                                <input type="submit" value="{% trans 'Make Payment' %}">
+                            </form>
                         {% endfor %}
-                        </tbody>
-                    </table>
-                    <h1>
-                        مبلغ سفارش
-                        {{ order.total_price }}
-                    </h1>
-                    <form autocomplete=off method="post" action="{% url 'store:payments' %}">
-                        {% csrf_token %}
-                        <input type="text" hidden name="order_id" value="{{ order.id }}">
-                        <input type="submit" value="{% trans 'Make Payment' %}">
-                    </form>
-                {% endfor %}
-                <br>
-            {% else %}
-                <h1>{% trans "you have no order" %}</h1>
-            {% endif %}
+                        <br>
+                    {% else %}
+                        <h1 class="mt-5">سفارش تسویه شده ای موجود نیست</h1>
+                    {% endif %}
+                </div>
+                <div class="tab-pane fade show  mt-4" id="unpayed-orders" role="tabpanel"
+                     aria-labelledby="unpayed-orders">
+                    {% if has_unpayed_orders %}
+                        {% for order in unpayed_orders %}
+                            <a href="{% url 'store:order_item' order.id %}">
+                                <h1>{% translate "order" %} {{ forloop.counter }} {% translate "status" %} {{ order.get_status_display }}</h1>
+                            </a>
+                            <table class="table" id="cart-table">
+                                <thead>
+                                <tr>
+                                    <th scope="col">سطر</th>
+                                    <th scope="col">نام کالا</th>
+                                    <th scope="col">قیمت</th>
+                                    <th scope="col">تعداد</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for item in order.orderitem_set.all %}
+                                    <tr id="row{{ forloop.counter }}">
+                                        <th scope="row">{{ forloop.counter }}</th>
+                                        <td>{{ item.product.title }}</td>
+                                        <td>{{ item.product.price |floatformat:"0" |intcomma }}</td>
+                                        <td>{{ item.quantity }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            <h1>
+                                مبلغ سفارش
+                                {{ order.total_price }}
+                            </h1>
+                            <form autocomplete=off method="post" action="{% url 'store:payments' %}">
+                                {% csrf_token %}
+                                <input type="text" hidden name="order_id" value="{{ order.id }}">
+                                <input type="submit" value="{% trans 'Make Payment' %}">
+                            </form>
+                        {% endfor %}
+                        <br>
+                    {% else %}
+                        <h1 class="mt-5">سفارش پرداخت نشده ای موجود نیست</h1>
+                    {% endif %}
+                </div>
+            </div>
+
         </div>
     </div>
 {% endblock %}
